--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.show-sql=false
 # Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+mail.url=/google.com
+mail.host=localhost
+mail.port=8181
